[package]
name = "vita-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
fakeit = "1.1"
unicode-width = "0.1"
itertools = "0.12"
serde = "1.0.197"
serde_json = "1.0.114"
